--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,46 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 .card {
-  width: 400px;
+  width: auto;
   background: #fff;
-  margin: 16px auto;
+  margin: 32px 64px;
+  padding: 16px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 12px;
+  margin: 16px 0px;
+  width: auto;
 }
 
 .content {
   background: #e3f4ff;
+  font-size: 32px;
+  padding: 32px 16px;
+  width: auto;
 }
 
 .button-container {
   background: #e3f4ff;
+  font-size: 32px;
+  width: auto;
+  padding: 32px;
+  margin: 16px 0px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  align-content: center;
+  font-size: 32px;
+  width: auto;
+  margin: 0px auto;
+  padding: 16px 40px;
 }
