--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,29 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+
+}
+
+.imgs {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 32px;
+}
+
+.text {
+  display: flex;
+  text-align: center;
+  gap: 52px;
+}
+
+.plant-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+}
