--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,11 +5,10 @@
 }
 
 .container {
-  height: 100vh;
   text-align: center;
   display: grid;
-  grid-template-columns: 1fr 5fr;
-  grid-template-rows: auto 1fr 4fr auto;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: auto auto 4fr auto;
   grid-template-areas:
     "header header"
     "sidebar nav"
@@ -52,8 +51,8 @@
   background-color: #C50208;
   grid-area: sidebar;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  gap: 64px;
+  grid-template-rows: repeat(4, minmax(80px, 1fr));
+  gap: clamp(20px, 5vh, 64px);
 }
 
 .sidebar .photo {
@@ -64,6 +63,12 @@
   border-radius: 10px;
 }
 
+.sidebar .photo,
+.sidebar .side-content {
+  display: grid;
+  align-content: center;
+  justify-content: center;
+}
 
 .sidebar .side-content {
   background-color: white;
@@ -91,6 +96,10 @@
 .article {
   background-color: #bccbde;
   grid-area: article;
+  display: grid;
+  gap: 4px;
+  grid-auto-rows: minmax(auto, 200px);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .article p {
